# OnionChat

./: .gitignore  LICENSE  README.md  _wiper.c  chat_utils.py  client_a.py  client_a_main.py  client_b.py  client_b_main.py  compile.ps1  compile.sh  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
onionchat/: __init__.py  chat_utils.py  client_a.py  client_a_main.py  client_b.py  client_b_main.py  gui_qt.py  main.py
onionchat-rs/: Cargo.toml
onionchat-rs/src/: gui.rs  main.rs
tests/: test_crypto.py  test_edge_cases.py  test_full_exchange.py  test_main.py  test_more_crypto.py
