[package]
name = "onionchat-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
aes-gcm = "0.11.0-rc.0"
rand_core = "0.6"
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = "2"
base64 = "0.21"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
socks = "0.3"
eframe = "0.32"
egui_extras = { version = "0.32", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
chrono = "0.4"
arti-client = { version = "0.32", features = ["static"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
